--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "tinymce": "^8.2.0",
