--- a/eng-app/package.json
+++ b/eng-app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@vueuse/core": "^14.0.0",
     "axios": "^1.2.1",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.1",
