--- a/eng-app/package.json
+++ b/eng-app/package.json
@@ -13,7 +13,7 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "postinstall": "quasar prepare",
-    "deploy": "push-dir --dir=dist/spa --remote=gh-pages --branch=master"
+    "deploy": "push-dir --dir=dist/spa --remote=gh-pages --branch=gh-pages"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
